--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pec1",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "M4.257 PEC1 Desarrollo de una web",
   "license": "",
   "author": "",
@@ -15,9 +15,10 @@
   },
   "devDependencies": {
     "autoprefixer": "^9.8.6",
+    "browserslist": "^4.16.6",
     "npm-run-all": "^4.1.5",
     "parcel-bundler": "^1.12.4",
     "rimraf": "^3.0.2"
   },
-  "browserslist": {}
+  "dependencies": {}
 }
