--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pec1",
-  "version": "0.0.2",
+  "version": "2.0.0",
   "description": "M4.257 PEC1 Desarrollo de una web",
   "license": "",
   "author": "",
@@ -14,11 +14,19 @@
     "start": "npm run build && npm run dev"
   },
   "devDependencies": {
+    "@babel/core": "^7.14.2",
+    "@babel/preset-react": "^7.13.13",
     "autoprefixer": "^9.8.6",
     "browserslist": "^4.16.6",
     "npm-run-all": "^4.1.5",
     "parcel-bundler": "^1.12.4",
     "rimraf": "^3.0.2"
   },
-  "dependencies": {}
+  "dependencies": {
+    "imagemin": "^8.0.0",
+    "imagemin-gifsicle": "^7.0.0",
+    "imagemin-mozjpeg": "^9.0.0",
+    "parcel-plugin-imagemin": "^4.0.2",
+    "postcss-modules": "^4.0.0"
+  }
 }
